--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "styled-components": "^5.3.9",
     "vite-plugin-svgr": "^2.4.0"
   },
